# picoports

./: .clang-format  .gitmodules  60-gpiochip.rules  CMakeLists.txt  LICENSE  README.md  TODO.md
.github/workflows/: build.yml  pull-request.yml  release.yml
docs/: pad_social_preview_content.sh
src/: byte_ops.h  dln2.h  main.c  main.h  pp_adc.c  pp_adc.h  pp_ctrl.c  pp_ctrl.h  pp_gpio.c  pp_gpio.h  pp_i2c.c  pp_i2c.h  pp_uart.c  pp_uart.h  tusb_config.h  usb_descriptors.c
